# bobik_robot

./: README.md  package.xml  setup.cfg  setup.py
bobik_robot/: bobik_robot.py  state_publisher.py
bobik_robot/pyogg/: ogg.py  opus_file.py  opus_file_stream.py
bobik_robot/skills/: dialogflow.py  dialogflow_actions.py
config/: ekf.yaml
docs/: INSTALL.MD
docs/CAD/: bobik-assembly.FCStd  bobik-assembly.FCStd1  bobik-urdf-meshes.FCStd  bobik-urdf-meshes.FCStd1
docs/CAD/backup/: absolute-rotation-test-magnet-drzak-rotor.stl  absolute-rotation-test-magnet-drzak-stator.stl  absolute-rotation-test.FCStd  absolute-rotation-test.FCStd1  absolute-rotation-test2.FCStd  ass-assembly.FCStd  ass-assembly.FCStd1  ass-part.FCStd  ass-part.FCStd1  drive-module-differential.FCStd  drive-module-differential.FCStd1  drive-module-holder.FCStd  drive-module-holder.FCStd1  drive-module-holder_v3-swerve.FCStd  drive-module-holder_v3-swerve.FCStd1  (+4 more)
docs/electrical/: baterie.ods  electrical-schema_v1.drawio
docs/mechanical/: arm.FCStd  arm.FCStd1  mechanical-schema_v1.drawio
docs/software/: arduino-sw.drawio  odometry.drawio  odometry.ods  user-interfaces.drawio
launch/: bobik_offline.launch.py  bobik_robot.launch.py
maps/: place.yaml
meshes/: base_link.dae  base_link_collision.dae  caster_rotation_link.dae  caster_wheel_link.dae
params/: nav2_params.yaml
rviz/: rviz_basic_settings.rviz
scripts/: bobik_build.sh  bobik_start.sh
test/: test_zmq.py
urdf/: bobik.gazebo.xacro  bobik_robot.urdf  bobik_robot.urdf.xacro  common_properties.xacro  materials.xacro
(+102 files in other folders)
